# revm

./: .gitignore  Cargo.toml
.github/workflows/: book.yml  ci.yml
crates/interpreter/src/: gas.rs
crates/interpreter/src/gas/: calc.rs
crates/mantle/: Cargo.toml
crates/mantle/src/: fast_lz.rs  handler_register.rs  l1block.rs  lib.rs  result.rs  spec.rs  wiring.rs
crates/mantle/src/transaction/: abstraction.rs  deposit.rs  error.rs
crates/primitives/src/: env.rs
crates/revm/: Cargo.toml
crates/revm/src/: evm.rs  lib.rs  optimism.rs
crates/revm/src/handler/handle_types/: validation.rs
crates/revm/src/handler/mainnet/: pre_execution.rs  validation.rs
crates/revm/src/optimism/: bvm_eth.rs  handler_register.rs  l1block.rs
examples/: generate_block_traces.rs
examples/client/: Cargo.toml
examples/client/src/: errors.rs  executor.rs  hasher.rs  hint.rs  lib.rs  utils.rs
examples/client/src/mantle/: chain_provider.rs  mod.rs
examples/client/src/memoryoracle/: mod.rs
examples/client/src/oracle/: mod.rs
examples/mantle_balance_check/: Cargo.toml
examples/mantle_balance_check/src/: main.rs
examples/succinct-range/: Cargo.toml
examples/succinct-range/src/: main.rs
