[workspace]
members = [
    "bins/revme",
    "bins/revm-test",
    "crates/revm",
    "crates/primitives",
    "crates/interpreter",
    "crates/precompile",
    "examples/mantle_balance_check",
    "examples/client", "examples/succinct-range",
]
resolver = "2"
default-members = ["crates/revm"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.ethtests]
inherits = "test"
opt-level = 3
