[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
alloy-rlp = { version = "0.3.9", default-features = false }

alloy-consensus = { version = "0.5.4", features = ["k256"] }
alloy-primitives = { version = "0.8.5", features = ["rlp"] }
alloy = { version = "0.4.2", features = [
    "providers",
    "eips",
    "consensus",
    "rlp",
    "rpc-types",
] }
op-alloy = { version = "0.6.3", features = [
    "provider",
    #    "eips",
    #    "consensus",
    #    "rlp",
    #    "rpc-types"
] }

op-alloy-network = { path = "../../../op-alloy/crates/network" }
#kona
#kona-executor = "0.0.4"
kona-mpt = { path = "../../../kona/crates/mpt", default-features = false }
kona-preimage = { path = "../../../kona/crates/preimage" }
kona-common = { path = "../../../kona/crates/common" }
derive_more = "1.0.0"
serde_json = "1.0.132"

# mics
anyhow = "1.0.89"
lru = "0.12.4"
spin = "0.9.8"
tokio = "1.41.1"
