[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
alloy-rlp = { version = "0.3.9", default-features = false }
rocksdb = "0.21.0"

# alloy
alloy-consensus = { version = "0.4.2", features = ["k256"] }
alloy-primitives = { version = "0.8.5", features = ["rlp"] }
alloy = { version = "0.4.2", features = [
    "providers",
    "eips",
    "consensus",
    "rlp",
    "rpc-types",
] }
# op-alloy
op-alloy = { version = "0.6.3", features = [
    "provider",
] }
op-alloy-network = { git = "https://github.com/mantle-xyz/op-alloy", branch = "mantle-alloy" }

#kona
kona-mpt = { git = "https://github.com/mantle-xyz/kona", branch = "mantle-kona", default-features = false }
kona-preimage = { git = "https://github.com/mantle-xyz/kona", branch = "mantle-kona",features = ["rkyv"] }
kona-common = { git = "https://github.com/mantle-xyz/kona", branch = "mantle-kona" }

# mics
serde_json = "1.0.132"
derive_more = "1.0.0"
anyhow = "1.0.89"
lru = "0.12.4"
spin = "0.9.8"
tokio = "1.41.1"
rkyv = "0.7.44"
