[package]
name = "example-block-traces"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
revm = { path = "../../crates/revm", features = [
    "std",
    "serde-json",
    "ethersdb",
    "optimism",
] }
ethers-providers = { version = "2.0", features = ["default", "optimism"] }
ethers-core = { version = "2.0.14", features = ["optimism"] }
# database = { workspace = true, features = ["std", "alloydb"] }
# inspector = { workspace = true, features = ["std", "serde-json"] }
# mantle = { workspace = true, features = ["default"] }
# optimism = { workspace = true, features = ["default"] }

# tokio
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# alloy
alloy-eips = "0.4.2"
alloy-provider = "0.4.2"
alloy-consensus = { version = "0.4.2", features = ["k256"] }
#alloy-consensus = { path = "../../../op-alloy/crates/consensus", features = ["k256"] }
alloy-rpc-types = "0.4.2"
alloy-primitives = { version = "0.8.5", features = ["rlp"] }

#op-alloy
op-alloy-consensus = { path = "../../../op-alloy/crates/consensus" }
# op-alloy-provider = "0.4.0"

# progress bar
indicatif = "0.17"

# mics
anyhow = "1.0.89"
log = "0.4.22"
