[package]
name = "succinct-range"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { path = "../../crates/revm", features = [
    "std",
    "serde-json",
    #    "ethersdb",
    "optimism",
    "kzg-rs",
] }
revm-primitives = { path = "../../crates/primitives", features = [
    "std",
    "serde",
    "hashbrown",
    "asm-keccak",
    "portable",
    "optimism",
] }
#ethers-providers = { version = "2.0", features = ["default", "optimism"] }
#ethers-core = { version = "2.0.14", features = ["optimism"] }

# tokio
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# alloy
#alloy-eips = "0.4.2"
#alloy-provider = "0.4.2"
alloy-consensus = { version = "0.5.4", features = ["k256"] }
alloy-rpc-types-engine = "0.5.4"
alloy-primitives = { version = "0.8.5", features = ["rlp"] }
alloy = { version = "0.4.2", features = [
    "providers",
    "eips",
    "rpc-types",
    "rlp"
] }


#op-alloy
op-alloy-consensus = { path = "../../../op-alloy/crates/consensus", features = [
    "k256",
] }
op-alloy-network = { path = "../../../op-alloy/crates/network" }
op-alloy-rpc-types = { path = "../../../op-alloy/crates/rpc-types" }
op-alloy-rpc-types-engine = { git = "https://github.com/mantle-xyz/op-alloy", branch = "kona-test" }
op-alloy-genesis = { git = "https://github.com/mantle-xyz/op-alloy", branch = "kona-test" }

#op-alloy-provider = "0.4.2"
indicatif = "0.17"
kona-executor = { path = "../../../kona/crates/executor" }
kona-mpt = { path = "../../../kona/crates/mpt", default-features = false }
kona-client = { path = "../../../kona/bin/client" }
client = { path = "../client" }

# mics
anyhow = "1.0.89"
log = "0.4.22"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
dotenv = "0.15"
