[package]
name = "succinct-range"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { path = "../../crates/revm", features = [
    "std",
    "serde-json",
    "optimism",
    "kzg-rs",
] }
revm-primitives = { path = "../../crates/primitives", features = [
    "std",
    "serde",
    "hashbrown",
    "asm-keccak",
    "portable",
    "optimism",
] }

# tokio
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# alloy
alloy-consensus = { version = "0.4.2", features = ["k256"] }
alloy-rpc-types-engine = "0.4.2"
alloy-primitives = { version = "0.8.5", features = ["rlp"] }
alloy = { version = "0.4.2", features = [
    "providers",
    "eips",
    "rpc-types",
    "rlp"
] }


#op-alloy
op-alloy-consensus = { git = "https://github.com/mantle-xyz/op-alloy", branch = "mantle-alloy", features = [
    "k256",
] }
op-alloy-network = { git = "https://github.com/mantle-xyz/op-alloy", branch = "mantle-alloy" }
op-alloy-rpc-types = { git = "https://github.com/mantle-xyz/op-alloy", branch = "mantle-alloy" }
op-alloy-rpc-types-engine = { git = "https://github.com/mantle-xyz/op-alloy", branch = "mantle-alloy" }
op-alloy-genesis = { git = "https://github.com/mantle-xyz/op-alloy", branch = "mantle-alloy" }

#op-alloy-provider = "0.4.2"
indicatif = "0.17"
kona-executor = { git = "https://github.com/mantle-xyz/kona", branch = "mantle-kona" }
kona-mpt = { git = "https://github.com/mantle-xyz/kona", branch = "mantle-kona", default-features = false }
kona-client = { git = "https://github.com/mantle-xyz/kona", branch = "mantle-kona" }
client = { path = "../client" }

# mics
anyhow = "1.0.89"
log = "0.4.22"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
dotenv = "0.15"
